--- a/roles/sentry/tasks/main.yml
+++ b/roles/sentry/tasks/main.yml
@@ -74,15 +74,15 @@
 - name: Restart sentry
   supervisorctl: name=sentry state=restarted
 
-- name: Transfer script to add superuser
-  copy: src=create_superuser.py
-        dest=/etc/sentry/create_superuser.py
-        owner=root
-        group=root
-        mode=0700
+# - name: Transfer script to add superuser
+#   copy: src=create_superuser.py
+#         dest=/etc/sentry/create_superuser.py
+#         owner=root
+#         group=root
+#         mode=0700
 
-- name: Create sentry superuser
-  command: "{{ virtualenv_path }}sentry/bin/python /etc/sentry/create_superuser.py {{ sentry_superuser_username }} {{ sentry_superuser_password }} {{ sentry_superuser_email }}"
-  register: sentry_superuser
-  ignore_errors: true
-  changed_when: "sentry_superuser.rc == 0"
+# - name: Create sentry superuser
+#   command: "{{ virtualenv_path }}sentry/bin/python /etc/sentry/create_superuser.py {{ sentry_superuser_username }} {{ sentry_superuser_password }} {{ sentry_superuser_email }}"
+#   register: sentry_superuser
+#   ignore_errors: true
+#   changed_when: "sentry_superuser.rc == 0"
