--- a/roles/Ansibles.timezone/tasks/main.yml
+++ b/roles/Ansibles.timezone/tasks/main.yml
@@ -5,5 +5,6 @@
     pkg: tzdata
     state: present
 
+# TODO: Make this return "OK" or "SKIPPED" if it doesn't need to be done.
 - name: ntp | timezone | Update the hardware clock
   command: dpkg-reconfigure -f noninteractive tzdata
